# my_suitcase

./: .gitignore  .gitmodules  Readme.md  aws_scripts  bash_aliases  bash_scripts  bashrc  htoprc  install.sh  readme.md  tmux.conf  vimrc
atuin/: config.toml  shell-init.sh
docs/plans/: 2026-02-24-suitcase-modernization-design.md
install/: atuin.sh  common.sh  macos.sh  shell.sh  tmux.sh
personalize/: personalize
personalize/get_bcc/: get_deps.ubuntu.sh
personalize/scripts/: get_atuin.sh  get_aws.sh  get_bash-preexec.sh  get_bpftrace.sh  get_cilium.sh  get_gh.sh  get_hubble.sh  get_mitmproxy.sh  get_nvim.sh  get_rg.sh  setup_claude_statusline.sh  setup_claude_top.sh  setup_nix.sh  (+2 more)
plan-vim-gate/: Cargo.toml  README.md
plan-vim-gate/docs/superpowers/specs/: 2026-07-15-vim-plan-gate-design.md
plan-vim-gate/src/: buffer.rs  debug.rs  decision.rs  editor.rs  hook_io.rs  main.rs
scripts/: get_docker.sh  get_python_deps.sh  gitswitcher.sh
shell/: bash.sh  boot.sh  core.sh  zsh.sh
subversion/: config
tools/claude-top/: Cargo.toml  README.md
tools/claude-top/docs/superpowers/plans/: 2026-07-17-claude-top.md
tools/claude-top/docs/superpowers/specs/: 2026-07-17-claude-top-design.md
tools/claude-top/src/: discover.rs  git.rs  main.rs  pricing.rs  runtime.rs  tmux.rs  ui.rs  usage.rs
tools/ralph/: BACKLOG.schema.md  Cargo.toml  PROMPT.template.md  README.md  ralph.sh
tools/ralph/src/: backlog.rs  classify.rs  config.rs  context.rs  control.rs  git.rs  init.rs  main.rs  schema.rs  state.rs  stream.rs
tools/ralph/tests/: cli.rs
vim/: .netrwhist
(+6 files in other folders)
