[package]
name = "plan-vim-gate"
version = "0.1.0"
edition = "2021"
description = "Terminal-native ExitPlanMode gate for Claude Code — edit the plan in nvim, hand it back as authoritative."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"

[profile.release]
opt-level = "s"
