[package]
name = "claude-top"
version = "0.1.0"
edition = "2021"
description = "Live read-only TUI dashboard for local Claude Code instances and usage."

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
anyhow = "1"

[profile.release]
opt-level = "s"
