[package]
name = "ralph"
version = "0.1.0"
edition = "2021"
description = "External autonomous loop for Claude Code — fresh-context iterations with budgets, timeouts, and no-progress escalation."

[[bin]]
name = "ralph"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[profile.release]
opt-level = "s"
